Process Hacker

2.36
 * NEW/IMPROVED:
 * FIXED:
   * Fixed file dialog crash in Windows PE environments
   * Fixed Read/Write Address crash

2.35
 * NEW/IMPROVED:
   * Added Load Time and Load Reason columns for modules (Windows 8 and above)
   * Added handle names for Job and Section objects
   * Added Read/Write Memory for Section objects (in process Handles tab)
   * Added CF Guard (Control Flow Guard) column for processes and modules
   * Added highlighting for AppContainer DLLs
   * Added AppContainer and CF Guard image characteristics to peview
   * Added Open Key and Open File Location menu items for services
   * Set priority and I/O priority for multiple processes at once
   * Support for up to 64 processors when setting process/thread affinity
   * Updated ExtendedTools plugin:
     * Added Disk and Network graphs for all processes
   * Updated UserNotes plugin:
     * Added ability to save I/O priority
 * FIXED:
   * Fixed memory editor copy bug

2.34
 * NEW/IMPROVED:
   * Proper Unicode support
   * CPU and GPU graphs are displayed in a grid now (thanks pavel_kv!)
   * Start Task Manager now elevates when necessary
   * Better names for memory regions in Memory tab (for PEBs, TEBs, thread stacks)
   * Added tooltip information for user-mode driver framework (UMDF) host processes
   * Added option to reduce row height (set ThinRows to 1 in settings.xml)
   * Added NetAdapters plugin: adds graphs for selected network adapters to the System Information window
   * Updated ExtendedTools plugin:
     * Added GPU graphs for all processes
     * Can now use the search box in the Disk tab
     * Improved kernel logger handling
 * FIXED:
   * Fixed touch scrolling
   * Fixed EtwRegistration object names for 64-bit Windows 8.1
   * Fixed tray icons being clipped in high DPI environments
   * Fixed crash in memory editor
   * Fixed multi monitor window placement bug

2.33
 * NEW/IMPROVED:
   * View digital signature information from process properties and peview